<resources>
    <string name="app_name">AndroidApp</string>
    <string name="login_page">Login Page</string>
    <string name="registration_page">Registration Page</string>
    <!--             Button Strings                  -->
    <string name="button_log_in">Log in</string>
    <string name="button_verify">Verify</string>
    <string name="button_register">Register</string>

    <!--             Hint Strings                    -->
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_phoneNumber">Phone number</string>
    <string name="hint_verification">Verification Code</string>
    <string name="hint_group">Group Code</string>
    <!--             Dashboard Strings              -->
    <string name="dashboard_tracking">Tracking</string>
    <string name="dashboard_settings">Settings</string>
    <string name="dashboard_home">Home</string>
    <string name="dashboard_history">History</string>
    <string name="set_goal">Set Goal</string>
    <string name="add_daily_weight">Add Daily Weight</string>
    <string name="enter_a_weight">Enter a weight</string>
    <string name="current_goal_weight">Current Goal Weight:</string>

    <string name="date">Date</string>
    <string name="weight">Weight</string>
    <string name="delete">Delete</string>
    <string name="target">target</string>
    <string name="set_a_goal">Set a goal</string>
    <string name="current_target_date">Current Target Date:</string>
    <string name="target_weight">target_weight</string>
    <string name="target_date">target_date\n</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="tracking">Tracking</string>
    <string name="change_password">Change Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="set_target_date">Set Target Date</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="allow_permissions">Allow Permissions</string>
    <string name="manage_users">Manage Users</string>

</resources>