<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_dashboard"
    app:startDestination="@+id/dashboard_home_id">

    <fragment
        android:id="@+id/dashboard_history_id"
        android:name="com.example.androidapp.ui.dashboard.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/dashboard_home_id"
        android:name="com.example.androidapp.ui.dashboard.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/dashboard_settings_id"
        android:name="com.example.androidapp.ui.dashboard.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/dashboard_tracking_id"
        android:name="com.example.androidapp.ui.dashboard.tracking.TrackingFragment"
        android:label="@string/tracking"
        tools:layout="@layout/fragment_tracking" />

</navigation>