<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.dashboard.settings.SettingsFragment">

    <!-- Dark Mode Switch -->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_dark_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"/>

    <!-- Change Password Button -->
    <Button
        android:id="@+id/button_change_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        app:layout_constraintTop_toBottomOf="@id/switch_dark_mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"/>

    <!-- Manage Users Button -->
    <Button
        android:id="@+id/button_manage_users"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/manage_users"
        app:layout_constraintTop_toBottomOf="@id/button_change_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"/>

    <!-- Allow Permissions Button -->
    <Button
        android:id="@+id/button_allow_permissions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/allow_permissions"
        app:layout_constraintTop_toBottomOf="@id/button_manage_users"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
